--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ dependencies:
   url_launcher: ^6.3.1
   share_plus: ^10.1.2
   lottie: ^3.1.2
+  audioplayers: ^5.2.1
+  webview_flutter: ^4.4.2
 
 dev_dependencies:
   flutter_test:
@@ -112,6 +114,17 @@ flutter:
     - assets/translations/
     - assets/svg/
     - assets/lotties/
+    - assets/mp3/
+    - assets/data/data.json
+    - assets/data/dogcatrat/
+    - assets/data/spoonbaloon/
+    - assets/data/burger/
+    - assets/data/sockrock/
+    - assets/data/ballbell/
+    - assets/data/carstar/
+    - assets/data/phonecone/
+    - assets/data/boxfox/
+    - assets/data/loghog/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
