--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,8 +81,12 @@ dependencies:
   url_launcher: ^6.3.1
   share_plus: ^10.1.2
   lottie: ^3.1.2
-  audioplayers: ^5.2.1
+  audioplayers: ^6.5.1
   webview_flutter: ^4.4.2
+  permission_handler: ^11.3.1
+  camera: ^0.11.0+1
+  path_provider: ^2.1.4
+  flutter_screen_recording: ^2.0.24
 
 dev_dependencies:
   flutter_test:
