--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,8 +72,11 @@ dependencies:
   firebase_core: ^4.3.0
 #  firebase_messaging: ^16.1.0
 #  flutter_local_notifications: ^19.5.0
+  firebase_remote_config: ^6.1.2
   firebase_analytics: ^12.1.0
-
+  flutter_ads_native:
+    path:
+      flutter_ads_native
   go_router: ^17.0.1
 
   image: ^4.1.7
