--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 <!--    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>-->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION"/>
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
 
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
@@ -52,6 +53,13 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <meta-data
+            android:name="com.tiktok.sdk.AccessToken"
+            android:value="@string/tiktok_app_secret" />
+        <meta-data
+            android:name="com.tiktok.sdk.AppId"
+            android:value="@string/tiktok_app_id" />
         <service
             android:name="com.foregroundservice.ForegroundService"
             android:foregroundServiceType="mediaProjection">
@@ -68,7 +76,7 @@
             <data android:mimeType="text/plain"/>
         </intent>
         <!-- TikTok app package -->
-        <package android:name="com.zhiliaoapp.musically" />
+        <package android:name="com.say.word.challenge" />
         <!-- Allow opening URLs -->
         <intent>
             <action android:name="android.intent.action.VIEW" />
