--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ dependencies:
 #  flutter_local_notifications: ^19.5.0
   firebase_remote_config: ^6.1.2
   firebase_analytics: ^12.1.0
+  firebase_crashlytics: ^5.0.6
+
   flutter_ads_native:
     path:
       flutter_ads_native
