--- a/flutter_ads_native/android/build.gradle
+++ b/flutter_ads_native/android/build.gradle
@@ -25,6 +25,19 @@ allprojects {
 apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
 
+dependencies {
+    testImplementation("org.jetbrains.kotlin:kotlin-test")
+    testImplementation("org.mockito:mockito-core:5.0.0")
+
+    implementation("com.facebook.android:facebook-android-sdk:18.1.3")
+    implementation("com.google.android.gms:play-services-ads:24.9.0")
+    implementation("com.github.tiktok:tiktok-business-android-sdk:1.6.0")
+
+    // Analytics for ads performance tracking (uses Firebase initialized by host app)
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
+    implementation 'com.google.firebase:firebase-analytics'
+}
+
 android {
     namespace = "com.example.flutter_ads_native"
 
@@ -46,14 +59,6 @@ android {
 
     defaultConfig {
         minSdk = 24
-    }
-
-    dependencies {
-        testImplementation("org.jetbrains.kotlin:kotlin-test")
-        testImplementation("org.mockito:mockito-core:5.0.0")
-        implementation("com.facebook.android:facebook-android-sdk:18.1.3")
-        implementation("com.google.android.gms:play-services-ads:24.9.0")
-        implementation("com.github.tiktok:tiktok-business-android-sdk:1.6.0")
     }
 
     testOptions {
