--- a/flutter_ads_native/android/build.gradle
+++ b/flutter_ads_native/android/build.gradle
@@ -51,6 +51,7 @@ android {
     dependencies {
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
+        implementation "androidx.cardview:cardview:1.0.0"
         implementation("com.facebook.android:facebook-android-sdk:18.1.3")
         implementation("com.google.android.gms:play-services-ads:24.9.0")
         implementation("com.github.tiktok:tiktok-business-android-sdk:1.6.0")
