--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   package_info_plus: ^9.0.0
 
-  connectivity_plus: ^7.0.0
+  connectivity_plus: ^6.1.5
 
   firebase_core: ^4.3.0
 #  firebase_messaging: ^16.1.0
@@ -93,6 +93,7 @@ dependencies:
   path_provider: ^2.1.4
   flutter_screen_recording: ^2.0.24
   webview_flutter_android: ^4.10.11
+  internet_connection_checker: ^3.0.1
 
 dev_dependencies:
   flutter_test:
